
== 2.22 ==
 * Include link to NYU Poly WITest wireless site. (#773)
 * Fix headers in email that your lead request was received. (#1197)
 * Fix bug report to print list of aggregates correctly. (#1198)
 * Change label for add resources URL entry (#1201)
 * Use `email()` function to get user's address, not a `mail` attribute. (#1206)
 * Move included files to lib from portal (#1207)
 * Exclude users with no public SSH keys from the generated omni_config. (#1215)
 * Widen URL entry on Jacks add resources page (#1218)

== 2.21.4 ==
 * Lowercase eppn before lookup in speaks-for flow (#1209)

== 2.21.3 ==
 * New Jacks icons

== 2.21.2 ==
 * Provide a simple Jacks context (#1194)
 * Add an `index.php` that redirects to `home.php` to block directory
   listing. (#1196)
 * Change URL entrypoints for GENI Desktop (#1199)

== 2.21 ==
 * Added support for distinguishing bound, unbound and partially bound rspecs. (#1126)
 * Added "Jacks beta" buttons and versions of slices.php (slice-jacks.php) and 
   slice-add-resources.php (slice-add-resources-jacks.php) that handle all creation and management
   of topologies by embedding Jacks viewer/editor in PHP portal pages. (#1126)
 * When sending email, set charset to utf8 and transfer encoding to 8bit,
   so that international characters are preserved correctly. (#1162)
 * Extract sliver expiration at FOAM (so OESS), SFA, and GRAM AMs. (#1173)
 * aggregates_in_slice only finds one aggregate (#1174)
 * Verify the signer of a speaks-for credential before storing it. (#1175)
 * getBrowser utility must handle not finding browser version. (#1176)
 * Log, validate, and protect temp uploads (#1177)
 * RSpec View button is non-responsive (#1181)
 * JavaScript reference errors on RSpec viewer (#1182)
 * Detect errors in loadXML parsing RSpecs. (#1179)
 * Support multi-am RSpecs. Jacks page handles them fully,
   main page requires you to pick an AM (a bug). (#1087)