@@ -11,6 +11,7 @@
  * Change label for add resources URL entry (#1201)
  * Use `email()` function to get user's address, not a `mail` attribute. (#1206)
  * Move included files to lib from portal (#1207)
+ * Handle unknown AM URNs and URLs mroe gracefully. (#1212)
  * Exclude users with no public SSH keys from the generated omni_config. (#1215)
  * Widen URL entry on Jacks add resources page (#1218)
 
